--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
-<button>HELLO1</button>
+<style>
+  button{
+    background-color: rgb(200,0,0); 
+    color: white;
+    border: none;
+    height: 36px;
+    width: 105px;
+    
+    
+  }
+</style>
+
+<button>SUBSCRIBE</button>
 <p>a paragraph of text</p>
