--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <style>
-  button{
+  .subscribe-button{
     background-color: rgb(200,0,0); 
     color: white;
     border: none;
     height: 36px;
     width: 105px;
+    border-radius: 2px;
+    cursor: pointer;
     
     
   }
 </style>
 
-<button>SUBSCRIBE</button>
+<button class="subscribe-button">
+  SUBSCRIBE
+</button>
+
+<button class="join-button">
+  JOIN
+</button>
 <p>a paragraph of text</p>
