--- a/index.html
+++ b/index.html
@@ -7,8 +7,29 @@
     width: 105px;
     border-radius: 2px;
     cursor: pointer;
+    margin-right: 8px;
     
-    
+  }
+  .join-button {
+    background-color: white;
+    border-color: rgb(41,118,211);
+    border-style: solid;
+    border-width: 1px;
+    color: rgb(41,118,211);
+    height: 36px;
+    width: 60px;
+    border-radius: 2px;
+    cursor: pointer;
+  }
+  .tweet-button {
+    background-color: rgb(2, 137, 255);
+    border-color: rgb(41,118,211);
+    border: none
+    color: white;
+    height: 36px;
+    width: 80px;
+    border-radius: 18px;
+    cursor: pointer;
   }
 </style>
 
@@ -18,5 +39,10 @@
 
 <button class="join-button">
   JOIN
+</button>
+
+
+<button class="tweet-button">
+  TWEET
 </button>
 <p>a paragraph of text</p>
